--- a/admin-top.html
+++ b/admin-top.html
@@ -78,7 +78,7 @@
       }
 
       const { data, error } = await supabase
-        .from("admin_menus")
+        .from("admin_menu")
         .select("*")
         .eq("is_active", true)
         .order("sort_order", { ascending: true });
