--- a/admin-menu.html
+++ b/admin-menu.html
@@ -1,165 +1,108 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>管理メニュー管理</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-    }
-    .header {
-      background-color: #1e293b;
-      color: white;
-      padding: 10px 20px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .container {
-      display: flex;
-    }
-    .menu {
-      width: 220px;
-      background-color: #f8fafc;
-      padding: 20px;
-      border-right: 1px solid #ccc;
-      height: 100vh;
-      box-sizing: border-box;
-    }
-    .menu-item {
-      padding: 10px;
-      cursor: pointer;
-      border-radius: 5px;
-      margin-bottom: 5px;
-    }
-    .menu-item:hover {
-      background-color: #e2e8f0;
-    }
-    .main {
-      flex-grow: 1;
-      padding: 30px;
-    }
-    input[type="text"], input[type="number"] {
-      padding: 5px;
-      width: 300px;
-      margin-bottom: 10px;
-    }
-    button {
-      padding: 6px 12px;
-      margin-top: 5px;
-    }
-    table {
-      margin-top: 20px;
-      border-collapse: collapse;
-      width: 100%;
-    }
-    table, th, td {
-      border: 1px solid #ccc;
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-    }
-    th {
-      background-color: #f0f0f0;
-    }
-  </style>
-</head>
-<body>
-  <div class="header">管理者ダッシュボード</div>
-  <div class="container">
-    <div class="menu" id="menu"></div>
-    <div class="main">
-      <h2>管理メニュー管理</h2>
-      <div>
-        <div>表示名：<br/><input type="text" id="title" /></div>
-        <div>リンク先HTML：<br/><input type="text" id="filename" /></div>
-        <div>順番（数字）：<br/><input type="number" id="sort_order" /></div>
-        <div><label><input type="checkbox" id="is_active" /> 公開状態</label></div>
-        <button onclick="addMenu()">追加</button>
-      </div>
-      <table>
-        <thead>
-          <tr><th>表示名</th><th>HTML</th><th>順番</th><th>公開</th></tr>
-        </thead>
-        <tbody id="menuList"></tbody>
-      </table>
+
+<div class="content-container">
+  <h2>管理メニュー管理</h2>
+  <form id="menuForm">
+    <div>
+      <label>表示名：</label>
+      <input type="text" id="title" required>
     </div>
-  </div>
-  <script type="module">
-    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    <div>
+      <label>リンク先HTML：</label>
+      <input type="text" id="filename" required>
+    </div>
+    <div>
+      <label>順番（数字）：</label>
+      <input type="number" id="sort_order" required>
+    </div>
+    <div>
+      <label><input type="checkbox" id="is_active"> 公開状態</label>
+    </div>
+    <button type="submit">追加</button>
+  </form>
 
-    const supabase = createClient(
-      "https://wajullc9041-ui.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhanVsbGM5MDQxLXVpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MDYyMTY3NzcsImV4cCI6MjAyMTc5Mjc3N30.Rb9cMZlBlEtMQUItDABGNN_lUzmLqDxvKjOEoYxGRVw"
-    );
+  <table id="menuTable">
+    <thead>
+      <tr>
+        <th>表示名</th>
+        <th>HTML</th>
+        <th>順番</th>
+        <th>公開</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
-    async function loadMenus() {
-      const { data, error } = await supabase
-        .from("admin_menus")
-        .select("*")
-        .order("sort_order", { ascending: true });
+<script type="module">
+  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+  const supabaseUrl = 'https://viihcgkjzzhkdiwdzdex.supabase.co'
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZpaWhjZ2tqenpoa2Rpd2R6ZGV4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTIxMzUwNDksImV4cCI6MjAyNzAxMTA0OX0.0jjcgZ_EH7Ek8MBwCvgtatg1-lDFpNuFRHh14iPYjJU'
+  const supabase = createClient(supabaseUrl, supabaseKey)
 
-      const menuList = document.getElementById("menuList");
-      menuList.innerHTML = "";
+  const tableBody = document.querySelector('#menuTable tbody')
+  const form = document.getElementById('menuForm')
 
-      if (error) {
-        console.error("読み込みエラー:", error);
-        return;
-      }
+  async function fetchMenus() {
+    const { data, error } = await supabase
+      .from('admin_menus')
+      .select('*')
+      .order('sort_order')
 
-      data.forEach(menu => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${menu.title}</td>
-          <td>${menu.filename}</td>
-          <td>${menu.sort_order}</td>
-          <td>${menu.is_active ? "〇" : ""}</td>
-        `;
-        menuList.appendChild(row);
-      });
+    if (error) {
+      console.error('取得エラー:', error)
+      return
     }
 
-    async function addMenu() {
-      const title = document.getElementById("title").value;
-      const filename = document.getElementById("filename").value;
-      const sort_order = parseInt(document.getElementById("sort_order").value);
-      const is_active = document.getElementById("is_active").checked;
+    tableBody.innerHTML = ''
+    data.forEach(menu => {
+      const row = document.createElement('tr')
+      row.innerHTML = `
+        <td>${menu.title}</td>
+        <td>${menu.filename}</td>
+        <td>${menu.sort_order}</td>
+        <td>${menu.is_active ? '✔' : ''}</td>
+      `
+      tableBody.appendChild(row)
+    })
+  }
 
-      const { error } = await supabase.from("admin_menus").insert([
-        { title, filename, sort_order, is_active }
-      ]);
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault()
+    const title = document.getElementById('title').value
+    const filename = document.getElementById('filename').value
+    const sort_order = Number(document.getElementById('sort_order').value)
+    const is_active = document.getElementById('is_active').checked
 
-      if (error) {
-        alert("追加失敗：" + error.message);
-      } else {
-        loadMenus();
-      }
+    const { error } = await supabase.from('admin_menus').insert([{ title, filename, sort_order, is_active }])
+    if (error) {
+      alert('追加失敗: ' + error.message)
+    } else {
+      form.reset()
+      await fetchMenus()
     }
+  })
 
-    async function loadSideMenu() {
-      const { data } = await supabase
-        .from("admin_menus")
-        .select("*")
-        .eq("is_active", true)
-        .order("sort_order", { ascending: true });
+  fetchMenus()
+</script>
 
-      const menuDiv = document.getElementById("menu");
-      data.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "menu-item";
-        div.textContent = item.title;
-        div.onclick = () => {
-          location.href = item.filename;
-        };
-        menuDiv.appendChild(div);
-      });
-    }
-
-    loadSideMenu();
-    loadMenus();
-  </script>
-</body>
-</html>
+<style>
+  .content-container {
+    padding: 20px;
+  }
+  form div {
+    margin-bottom: 10px;
+  }
+  table {
+    margin-top: 20px;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    text-align: left;
+  }
+  th {
+    background: #f4f4f4;
+  }
+</style>
