--- a/admin-menu.html
+++ b/admin-menu.html
@@ -1,19 +1,19 @@
 <div class="content-container">
   <h2>管理メニュー管理</h2>
   <form id="menuForm">
-    <div>
-      <label>表示名：</label>
+    <div class="form-group">
+      <label for="title">表示名：</label>
       <input type="text" id="title" required>
     </div>
-    <div>
-      <label>リンク先HTML：</label>
+    <div class="form-group">
+      <label for="filename">リンク先HTML：</label>
       <input type="text" id="filename" required>
     </div>
-    <div>
-      <label>順番（数字）：</label>
+    <div class="form-group">
+      <label for="sort_order">順番（数字）：</label>
       <input type="number" id="sort_order" required>
     </div>
-    <div>
+    <div class="form-group checkbox-group">
       <label><input type="checkbox" id="is_active"> 公開状態</label>
     </div>
     <button type="submit">追加</button>
@@ -33,7 +33,7 @@
 </div>
 
 <script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+  import {{ createClient }} from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
   const supabaseUrl = 'https://viihcgkjzzhkdiwdzdex.supabase.co'
   const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZpaWhjZ2tqenpoa2Rpd2R6ZGV4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTIxMzUwNDksImV4cCI6MjAyNzAxMTA0OX0.0jjcgZ_EH7Ek8MBwCvgtatg1-lDFpNuFRHh14iPYjJU'
   const supabase = createClient(supabaseUrl, supabaseKey)
@@ -41,11 +41,10 @@
   const tableBody = document.querySelector('#menuTable tbody')
   const form = document.getElementById('menuForm')
 
-  async function fetchMenus(org_id) {
-    const { data, error } = await supabase
+  async function fetchMenus() {
+    const {{ data, error }} = await supabase
       .from('admin_menus')
       .select('*')
-      .eq('org_id', org_id)
       .order('sort_order')
 
     if (error) {
@@ -57,85 +56,43 @@
     data.forEach(menu => {
       const row = document.createElement('tr')
       row.innerHTML = `
-        <td>${menu.title}</td>
-        <td>${menu.filename}</td>
-        <td>${menu.sort_order}</td>
-        <td>${menu.is_active ? '✔' : ''}</td>
+        <td>\${menu.title}</td>
+        <td>\${menu.filename}</td>
+        <td>\${menu.sort_order}</td>
+        <td>\${menu.is_active ? '✔' : ''}</td>
       `
       tableBody.appendChild(row)
     })
   }
 
-  async function initialize() {
-    const { data: { user } } = await supabase.auth.getUser()
-    if (!user) {
-      alert("未ログインです")
-      window.location.href = "index.html"
-      return
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault()
+    const title = document.getElementById('title').value
+    const filename = document.getElementById('filename').value
+    const sort_order = Number(document.getElementById('sort_order').value)
+    const is_active = document.getElementById('is_active').checked
+
+    const {{ error }} = await supabase.from('admin_menus').insert([{{ title, filename, sort_order, is_active }}])
+    if (error) {
+      alert('追加失敗: ' + error.message)
+    } else {
+      form.reset()
+      await fetchMenus()
     }
-    const org_id = user.email
-    await fetchMenus(org_id)
+  })
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault()
-      const title = document.getElementById('title').value
-      const filename = document.getElementById('filename').value
-      const sort_order = Number(document.getElementById('sort_order').value)
-      const is_active = document.getElementById('is_active').checked
-
-      const { error } = await supabase.from('admin_menus').insert([
-        { title, filename, sort_order, is_active, org_id }
-      ])
-      if (error) {
-        alert('追加失敗: ' + error.message)
-      } else {
-        form.reset()
-        await fetchMenus(org_id)
-      }
-    })
-  }
-
-  initialize()
+  fetchMenus()
 </script>
 
 <style>
-  .content-container {
-    padding: 20px;
-    font-family: sans-serif;
-  }
-  form div {
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  input[type="text"],
-  input[type="number"] {
-    flex: 1;
-    padding: 6px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  button {
-    padding: 8px 16px;
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  table {
-    margin-top: 20px;
-    width: 100%;
-    border-collapse: collapse;
-  }
-  th, td {
-    padding: 10px 14px;
-    border: 1px solid #ccc;
-    text-align: left;
-  }
-  th {
-    background-color: #f8f9fa;
-    font-weight: bold;
-  }
+  .content-container { padding: 20px; }
+  .form-group { margin-bottom: 10px; display: flex; align-items: center; }
+  .form-group label {{ width: 120px; display: inline-block; }}
+  .form-group input {{ flex: 1; padding: 6px; }}
+  .checkbox-group label {{ display: inline-flex; align-items: center; gap: 6px; }}
+  button {{ padding: 8px 16px; background: #2a7ae2; color: white; border: none; border-radius: 4px; cursor: pointer; }}
+  button:hover {{ background: #1d5bbf; }}
+  table {{ margin-top: 20px; width: 100%; border-collapse: collapse; }}
+  th, td {{ padding: 8px 12px; border: 1px solid #ccc; text-align: left; }}
+  th {{ background: #f4f4f4; }}
 </style>
